# cv-maker

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
_bmad/: config.user.yaml
_bmad-output/: deferred-work.md  project-context.md
_bmad-output/brainstorming/: brainstorming-session-20260418-143843.md
_bmad-output/planning/: architecture.md  deferred-work.md  epics.md  implementation-readiness-report-20260418.md  prd.md
_bmad-output/stories/: 1-1-initialize-project-scaffold.md  1-2-create-and-list-profiles.md  1-3-edit-profile-details.md  1-4-delete-profile.md  1-5-manage-profile-contacts.md
_bmad/bmm/: config.yaml
app/: exceptions.py  main.py
app/adapters/: factories.py  sqlite_database.py
app/apis/: contacts.py  dependencies.py  profiles.py
app/configs/: settings.py
app/constants/: enums.py  limits.py
app/interfaces/: database.py  latex_compiler.py  storage.py  template_discovery.py
app/middleware/: auth.py
app/models/: profile.py
app/schemas/: contact.py  profile.py
app/services/: contact_service.py  contact_service.test.py  profile_service.py  profile_service.test.py
migrations/: env.py
migrations/versions/: 996822aeacfb_create_profiles_table.py  a0726fa39315_create_profile_contacts_table.py
tests/: conftest.py  test_factories.py
tests/api/: test_contacts.py  test_health.py  test_profiles.py
(+2 files in other folders)
